--- a/package.json
+++ b/package.json
@@ -4,17 +4,16 @@
   "//3": "updating this file will download and update your packages",
   "name": "Rchain-Invoices",
   "version": "0.0.1",
-  "description": "A simple Node app built on Express, to create invoices for the Rchain Cooperative.",
+  "description": "A simple Node app built on Express to manage invoice agreements between the Rchain Cooperative and its contributors.",
   "main": "server.js",
   "scripts": {
     "start": "node server.js"
   },
   "dependencies": {
+    "csvtojson": "^2.0.8",
     "express": "^4.16.3",
     "express-handlebars": "^3.0.0",
-    "google-spreadsheet": "^2.0.5",
-    "google-spreadsheet-to-json": "^1.0.0",
-    "nodemon": "^1.18.4"
+    "jsonexport": "^2.3.0",
   },
   "engines": {
     "node": "8.x"
