--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "csvtojson": "^2.0.8",
     "express": "^4.16.3",
     "express-handlebars": "^3.0.0",
-    "jsonexport": "^2.3.0",
+    "jsonexport": "^2.3.0"
   },
   "engines": {
     "node": "8.x"
