--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "start": "node server.js"
   },
   "dependencies": {
+    "child_process": "^1.0.2",
     "csvtojson": "^2.0.8",
     "express": "^4.16.3",
     "express-handlebars": "^3.0.0",
